--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ classifiers = [
 ]
 dependencies = [
   "click==8.1.3",
-  "click-odoo==1.5.0",
   "psycopg2==2.9.10",
   "python-dateutil==2.7.3",
   "pypdf2==1.26.0",
@@ -36,7 +35,12 @@ repository = "https://github.com/alexandregaldeano/odoo-typing-classes-generator
 odoo-typing-classes-generator = "odoo_typing_classes_generator.cli.main:main"
 
 [tool.uv]
-dev-dependencies = ["coverage", "pytest==8.3.3", "pytest-cov==3.0.0"]
+dev-dependencies = [
+  "coverage",
+  "pytest==8.3.3",
+  "pytest-cov==3.0.0",
+  "num2words==0.5.14",
+]
 
 [build-system]
 requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
