--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ description = "Tool to generate Odoo model type classes for better IDE support"
 readme = "README.md"
 keywords = ["odoo", "modules", "addons", "typing"]
 license = { file = "LICENSE" }
-classifiers = ["License: GNU Affero General Public License v3 (AGPLv3)"]
+classifiers = [
+  "License :: OSI Approved :: GNU Affero General Public License v3",
+]
 dependencies = [
   "click==8.1.3",
   "psycopg2==2.9.10",
