--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,22 +14,34 @@ concurrency:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.8
-      - name: Cache .venv
+          python-version: ${{ matrix.python-version }}
+      - name: Cache uv cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: uv-cache-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-cache-${{ runner.os }}-
+      - name: Cache venv
         uses: actions/cache@v4
         with:
           path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          key:
+            venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('uv.lock')
+            }}
           restore-keys: |
-            venv-${{ runner.os }}-
+            venv-${{ runner.os }}-${{ matrix.python-version }}-
       - name: Install dependencies
         run: |
           pip install uv
-          uv sync --frozen --all-extras --dev
+          uv sync --all-extras --dev
       - name: Run tests
         run: |
           uv run coverage run -m pytest -v odoo_typing_classes_generator/tests
