--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,19 +9,22 @@ keywords = ["odoo", "modules", "addons", "typing"]
 license = { file = "LICENSE" }
 classifiers = [
   "License :: OSI Approved :: GNU Affero General Public License v3",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
 ]
 dependencies = [
-  "click==8.1.3",
-  "psycopg2==2.9.10",
-  "python-dateutil==2.7.3",
-  "pypdf2==1.26.0",
-  "urllib3==1.25.11",
-  "lxml==4.5.0",
-  "werkzeug==0.16.1",
+  "click>=8.0",
+  "psycopg2>=2.9.10",
+  "python-dateutil>=2.7.3",
+  "pypdf2>=1.26.0",
+  "urllib3>=1.25.11",
+  "lxml>=4.5.0, <4.9",
+  "werkzeug>=0.16.1",
 
   "odoo",
 ]
-requires-python = "==3.8.*"
+requires-python = ">=3.8, <3.13"
 dynamic = ["version"]
 
 [project.urls]
@@ -35,9 +38,9 @@ odoo-typing-classes-generator = "odoo_typing_classes_generator.cli.main:main"
 [tool.uv]
 dev-dependencies = [
   "coverage",
-  "pytest==8.3.3",
-  "pytest-cov==3.0.0",
-  "num2words==0.5.14",
+  "pytest>=8.3.3",
+  "pytest-cov>=3.0.0",
+  "num2words>=0.5.14",
 ]
 
 [build-system]
