--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ classifiers = [
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
+  "Framework :: Odoo :: 14.0",
 ]
 dependencies = [
   "click>=8.0",
@@ -24,7 +25,7 @@ dependencies = [
 
   "odoo",
 ]
-requires-python = ">=3.8, <3.13"
+requires-python = ">=3.8, <3.11"
 dynamic = ["version"]
 
 [project.urls]
