--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,17 +14,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Framework :: Odoo :: 14.0",
 ]
-dependencies = [
-  "click>=8.0",
-  "psycopg2>=2.9.10",
-  "python-dateutil>=2.7.3",
-  "pypdf2>=1.26.0",
-  "urllib3>=1.25.11",
-  "lxml>=4.5.0, <4.9",
-  "werkzeug>=0.16.1",
-
-  "odoo",
-]
+dependencies = ["click>=8.0", "urllib3>=1.25.11", "odoo"]
 requires-python = ">=3.8, <3.11"
 dynamic = ["version"]
 
